[project]
  name = "pulumi_netskope_publisher"
  description = "Pulumi components for provisioning Netskope Private Access Publishers on AWS, Azure, GCP, Kubernetes, vSphere, ESXi, Hcloud, Nutanix, OpenStack, OVH, Scaleway, OCI, Alicloud, Proxmox VE, DigitalOcean, Vultr, Exoscale, UpCloud, Stackit, Equinix Metal, Outscale, OpenTelekomCloud, TencentCloud, Yandex, and experimental Hyper-V."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["category/network", "kind/component", "pulumi", "netskope", "npa", "publisher", "aws", "azure", "gcp", "kubernetes", "vsphere", "esxi", "hcloud", "nutanix", "openstack", "ovh", "scaleway", "oci", "alicloud", "proxmoxve", "proxmox", "digitalocean", "vultr", "exoscale", "upcloud", "stackit", "equinix", "outscale", "opentelekomcloud", "tencentcloud", "yandex"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.3.3"
  license = "Apache-2.0"
  [project.urls]
    Homepage = "https://johnneerdael.github.io/pulumi-netskope-publisher/"
    Repository = "https://github.com/johnneerdael/pulumi-netskope-publisher"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_netskope_publisher = ["py.typed", "pulumi-plugin.json"]
